--- a/page02.html
+++ b/page02.html
@@ -6,16 +6,16 @@
 </head>
 <body>
 	<h2 align="center">HTML5百科</h2>
-	<img src="logo/b.jpg" alt="云播课设计学院UI设计师" align="left" hspace="30" />
+	<img src="images/b.jpg" alt="云播课设计学院UI设计师" align="left" hspace="30" />
 	<hr size="3" color="#CCCCCC" />
-	<img src="logo/pic01.jpg" />
-	<img src="logo/pic02.jpg" />
+	<img src="images/pic01.jpg" />
+	<img src="images/pic02.jpg" />
 	<hr size="3" color="#CCCCCC" />
 	<a href="page01.html">
 		<img src="logo/up.png" alt="上一页" vspace="20">
 	</a>
 	<a href="index.html">
-		<img src="logo/return.png" alt="返回" vspace="20" align="right">
+		<img src="images/return.png" alt="返回" vspace="20" align="right">
 	</a>
 </body>
 </html>
